force-app/main/default/objects/Persona_Compliance__c/Persona_Compliance__c.object-meta.xml
<CustomObject>
    <label>Persona Compliance</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Compliance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>