force-app/main/default/objects/Persona_Compliance__c/fields/Batch_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Run_Date__c</fullName>
    <label>Batch Run Date</label>
    <type>Date</type>
</CustomField>