force-app/main/default/objects/Persona_Compliance__c/fields/IBP_User__c.field-meta.xml
<CustomField>
    <fullName>IBP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ITGC/SOX - Ideal Base Persona User</description>
    <label>IBP User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ITGC_Persona_Compliance_Mismatches</relationshipName>
    <type>Lookup</type>
</CustomField>