force-app/main/default/objects/Persona_Compliance__c/fields/Mismatch_Type__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Type__c</fullName>
    <label>Mismatch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
            <value>
                <fullName>Apex Class Permission</fullName>
                <isActive>false</isActive>
                <label>Apex Class Permission</label>
            </value>
            <value>
                <fullName>FLS</fullName>
                <isActive>false</isActive>
                <label>FLS</label>
            </value>
            <value>
                <fullName>OLS</fullName>
                <isActive>false</isActive>
                <label>OLS</label>
            </value>
            <value>
                <fullName>System Permission</fullName>
                <isActive>false</isActive>
                <label>System Permission</label>
            </value>
            <value>
                <fullName>VF Permission</fullName>
                <isActive>false</isActive>
                <label>VF Permission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>