force-app/main/default/objects/Persona_Compliance__c/fields/Mismatched_User__c.field-meta.xml
<CustomField>
    <fullName>Mismatched_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ITGC/SOX - This is a child user who has mismatches in permission with IBP user</description>
    <label>Mismatched User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ITGC_Persona_Compliance_Mismatches1</relationshipName>
    <type>Lookup</type>
</CustomField>