force-app/main/default/objects/Persona_Compliance__c/fields/Mismatches__c.field-meta.xml
<CustomField>
    <fullName>Mismatches__c</fullName>
    <label>Mismatches</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>