force-app/main/default/objects/Persona_Compliance__c/fields/PermissionSet_Mismatch_Category__c.field-meta.xml
<CustomField>
    <fullName>PermissionSet_Mismatch_Category__c</fullName>
    <label>PermissionSet Mismatch Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>