force-app/main/default/objects/Persona_Compliance__c/fields/Test_Git__c.field-meta.xml
<CustomField>
    <fullName>Test_Git__c</fullName>
    <label>Test Git</label>
    <length>10</length>
    <type>Text</type>
</CustomField>