force-app/main/default/objects/Persona_Compliance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Run_Date__c</columns>
    <columns>IBP_User__c</columns>
    <columns>Mismatched_User__c</columns>
    <columns>Mismatch_Type__c</columns>
    <columns>PermissionSet_Mismatch_Category__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>